--- a/public/index.html
+++ b/public/index.html
@@ -1,109 +1,87 @@
-<!doctype html>
-<html lang="zh-CN">
+<!DOCTYPE html>
+<html lang="zh">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>店铺投资计算器</title>
-  <meta name="description" content="基于模板的店铺投资/毛利/盈亏平衡/回本周期计算器（适用于 Cloudflare Pages / Vercel 静态托管）" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="container">
-  <h1>🏪 店铺投资计算器</h1>
-  <p class="subtle">根据《店铺投资计算公式》模板，快速测算建店投入、毛利率、盈亏平衡点与回本周期。</p>
-</header>
+  <header>
+    <h1>店铺投资计算器</h1>
+    <p>一次性成本 · 毛利率 · 盈亏平衡点 · 回本周期</p>
+  </header>
 
-<main class="container grid">
-  <!-- 建店成本 -->
-  <section class="card">
-    <h2>① 建店成本（一次性投入）</h2>
-    <div class="fields">
-      <h3>押金/转让费</h3>
-      <label>转让费 <input type="number" id="transferFee" min="0" step="0.01" placeholder="0" /></label>
-      <label>房租押金 <input type="number" id="rentDeposit" min="0" step="0.01" placeholder="0" /></label>
-      <h3>固定成本</h3>
-      <label>技术学习费 <input type="number" id="trainingCost" min="0" step="0.01" placeholder="0" /></label>
-      <label>装修 <input type="number" id="decoration" min="0" step="0.01" placeholder="0" /></label>
-      <label>广告 <input type="number" id="advertising" min="0" step="0.01" placeholder="0" /></label>
-      <label>设备 <input type="number" id="equipment" min="0" step="0.01" placeholder="0" /></label>
-      <h3>经营成本（开业前准备）</h3>
-      <label>首批物料 <input type="number" id="initialMaterials" min="0" step="0.01" placeholder="0" /></label>
-      <label>3个月店租 <input type="number" id="rent3m" min="0" step="0.01" placeholder="0" /></label>
-      <label>人工工资（预支）<input type="number" id="preWages" min="0" step="0.01" placeholder="0" /></label>
-      <label>营销费用 <input type="number" id="marketing" min="0" step="0.01" placeholder="0" /></label>
-      <label>预备资金 <input type="number" id="reserve" min="0" step="0.01" placeholder="0" /></label>
-    </div>
-    <div class="result">
-      <div>总计资金（含押金/转让费）：<span id="totalCap">0</span></div>
-      <div>开业前总成本（不含押金/转让费）：<span id="preOpenCost">0</span></div>
-    </div>
-  </section>
+  <main class="dashboard">
+    <!-- 左列：成本 -->
+    <section class="card">
+      <h2>开店成本</h2>
+      <div class="fields">
+        <label>装修费 <input type="number" id="cost-decor" value="0"></label>
+        <label>设备费 <input type="number" id="cost-equip" value="0"></label>
+        <label>首批原料 <input type="number" id="cost-material" value="0"></label>
+        <label>房租押金 <input type="number" id="cost-rent" value="0"></label>
+        <label>证件办理 <input type="number" id="cost-license" value="0"></label>
+        <label>其他 <input type="number" id="cost-other" value="0"></label>
+      </div>
+      <div class="result">
+        <div>总投资：<span id="total-cost">0</span> 元</div>
+      </div>
+    </section>
 
-  <!-- 毛利率 -->
-  <section class="card">
-    <h2>② 毛利率</h2>
-    <div class="fields">
-      <label>单价（¥/份）<input type="number" id="unitPrice" min="0" step="0.01" placeholder="0" /></label>
-      <label>食材成本（¥/份）<input type="number" id="foodCost" min="0" step="0.01" placeholder="0" /></label>
-      <label>包装成本（¥/份）<input type="number" id="packageCost" min="0" step="0.01" placeholder="0" /></label>
-    </div>
-    <div class="result">
-      <div>毛利额（¥/份）：<span id="grossPerUnit">0</span></div>
-      <div>毛利率：<span id="grossMargin">0%</span></div>
-    </div>
-  </section>
+    <!-- 中列：毛利率 -->
+    <section class="card small">
+      <h2>毛利率</h2>
+      <div class="fields">
+        <label>单价 <input type="number" id="price" value="0"></label>
+        <label>食材成本 <input type="number" id="cost-food" value="0"></label>
+        <label>包装成本 <input type="number" id="cost-package" value="0"></label>
+      </div>
+      <div class="result">
+        <div>单份毛利：<span id="gross-profit">0</span> 元</div>
+        <div>毛利率：<span id="gross-margin">0%</span></div>
+      </div>
+    </section>
 
-  <!-- 盈亏平衡点 -->
-  <section class="card">
-    <h2>③ 盈亏平衡点</h2>
-    <div class="fields">
-      <label>每日房租（¥/天）<input type="number" id="rentDaily" min="0" step="0.01" placeholder="0" /></label>
-      <label>每日人工（¥/天）<input type="number" id="wageDaily" min="0" step="0.01" placeholder="0" /></label>
-      <label>每日能源（¥/天）<input type="number" id="energyDaily" min="0" step="0.01" placeholder="0" /></label>
-      <label>每日其他（¥/天）<input type="number" id="otherDaily" min="0" step="0.01" placeholder="0" /></label>
-      <label>每月营业天数（天）<input type="number" id="daysPerMonth" min="1" step="1" value="30" /></label>
-    </div>
-    <div class="result">
-      <div>每月运营成本：<span id="opexMonthly">0</span></div>
-      <div>盈亏平衡点（需达到的月营业额）：<span id="breakevenRevenue">0</span></div>
-      <div>盈亏平衡点（需达到的日营业额）：<span id="breakevenDailyRevenue">0</span></div>
-      <div class="hint">公式：盈亏平衡点 =（房租+人工+能源+其他）/ 毛利率</div>
-    </div>
-  </section>
+    <!-- 中列：盈亏平衡点 -->
+    <section class="card small">
+      <h2>盈亏平衡点</h2>
+      <div class="fields">
+        <label>房租(月) <input type="number" id="fixed-rent" value="0"></label>
+        <label>人工(月) <input type="number" id="fixed-labor" value="0"></label>
+        <label>能耗(月) <input type="number" id="fixed-energy" value="0"></label>
+        <label>其他(月) <input type="number" id="fixed-other" value="0"></label>
+      </div>
+      <div class="result">
+        <div>每日需营业额：<span id="breakeven-day">0</span> 元</div>
+        <div>每月需营业额：<span id="breakeven-month">0</span> 元</div>
+      </div>
+    </section>
 
-  <!-- 回本周期 -->
-  <section class="card">
-    <h2>④ 回本周期</h2>
-    <div class="fields">
-      <label>预计月营业额（¥）<input type="number" id="revenueMonthly" min="0" step="0.01" placeholder="0" /></label>
-      <label>食材+包装占比（%）<input type="number" id="cogsPct" min="0" max="100" step="0.01" placeholder="按毛利率自动带入，可覆盖" /></label>
-      <label>其他运营成本（¥/月）<input type="number" id="otherOpexMonthly" min="0" step="0.01" placeholder="除房租/人工/能源之外" /></label>
-      <label>税费占比（%）<input type="number" id="taxPct" min="0" max="100" step="0.01" value="0" /></label>
-    </div>
-    <div class="result">
-      <div>月毛利：<span id="grossMonthly">0</span></div>
-      <div>月净利润：<span id="netMonthly">0</span></div>
-      <div>回本周期（月）：<span id="paybackMonths">∞</span></div>
-    </div>
-  </section>
-</main>
+    <!-- 右列：回本周期 -->
+    <section class="card">
+      <h2>回本周期</h2>
+      <div class="fields">
+        <label>预计月营业额 <input type="number" id="monthly-sales" value="0"></label>
+        <label>税费率(%) <input type="number" id="tax-rate" value="0"></label>
+      </div>
+      <div class="result">
+        <div>月毛利：<span id="monthly-gross">0</span> 元</div>
+        <div>月净利：<span id="monthly-net">0</span> 元</div>
+        <div>预计回本：<span id="payback">0</span> 个月</div>
+      </div>
+    </section>
+  </main>
 
-<footer class="container footer">
-  <div class="actions">
-    <button id="saveBtn">保存参数</button>
-    <button id="loadBtn">载入参数</button>
-    <button id="resetBtn" class="danger">清空</button>
-    <button id="exportBtn">导出 JSON</button>
-    <label class="file">
-      导入 JSON <input type="file" id="importFile" accept="application/json" />
-    </label>
-  </div>
-  <p class="subtle">公式依据：毛利率=（营业额-食材-包装）/营业额；盈亏平衡点=（房租+人工+能源+杂项）/毛利率；回本周期=开业前总成本（不含押金/转让费）/每月净利润。</p>
-</footer>
+  <footer class="footer">
+    <div class="actions">
+      <label class="file">导入Excel <input type="file" id="import-excel" accept=".xlsx,.xls"></label>
+      <button id="export-excel">导出Excel</button>
+      <button class="danger" id="reset">重置</button>
+    </div>
+    <div class="hint">支持从Excel导入/导出，自动保存本地输入</div>
+  </footer>
 
-<script src="./app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
